--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,7 +5,9 @@ LABEL version=0.0.1
 
 RUN dnf -y upgrade
 RUN dnf -y update
+
 RUN dnf -y install nodejs
+RUN dnf -y install git-all
 
 WORKDIR /gunnik
 
