--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.8'
 services:
   gunnik:
-      build: .
-      environment:
-        - WATCHPACK_POLLING=true
-      ports:
-        - "8086:8086"
-      volumes:
-      - ./gunnik:/gunnik
-      stdin_open: true
-      tty: true
-      restart: unless-stopped
-      
+    build: .
+    environment:
+      - WATCHPACK_POLLING=true
+    ports:
+      - "8086:8086"
+    volumes:
+      - ../:/gunnik
+      - ~/.gitconfig:/root/.gitconfig:z
+    stdin_open: true
+    tty: true
+    restart: unless-stopped
