--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,7 +8,16 @@ RUN dnf -y update
 
 RUN dnf -y install nodejs
 RUN dnf -y install git-all
-RUN git config --global --add safe.directory /gunnik
+
+ARG CONTAINER_USER=devuser
+ARG CONTAINER_GROUP=devusers
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+RUN groupadd -g $USER_UID $CONTAINER_GROUP
+RUN useradd $CONTAINER_USER
+
+RUN usermod -G $CONTAINER_GROUP $CONTAINER_USER
 
 WORKDIR /gunnik
 
