--- a/gunnik/server/package.json
+++ b/gunnik/server/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/gun": "^0.9.3",
-    "@types/node": "^16.18.22",
     "gun": "^0.2020.1239",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
-    "@types/jest": "^27.5.2"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^18.16.0",
+    "@types/gun": "^0.9.3",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "npx ts-node --esm server.ts"
