--- a/gunnik/client/package.json
+++ b/gunnik/client/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.21.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/webextension-polyfill": "^0.10.0",
     "babel-loader": "^9.1.2",
     "core-js": "^3.30.1",
     "eslint": "^8.39.0",
@@ -21,13 +22,14 @@
     "prettier": "^2.8.8",
     "regenerator-runtime": "^0.13.11",
     "typescript": "^5.0.4",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
   },
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production --progress --hide-modules",
+    "build": "webpack --mode production --progress",
     "tscheck": "tsc",
     "lint": "eslint --ext .js,.ts,.jsx,.tsx src",
     "format": "yarn run lint --fix & yarn prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
