--- a/gunnik/client/.eslintrc.json
+++ b/gunnik/client/.eslintrc.json
@@ -6,6 +6,7 @@
         "prettier"
     ],
     "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
         "react/jsx-filename-extension": [
             "error",
             {
