--- a/gunnik/client/package.json
+++ b/gunnik/client/package.json
@@ -2,7 +2,6 @@
   "name": "gunnik",
   "version": "1.0.0",
   "description": "Application built on gun.js library. Allows sharing the browser with others.",
-  "main": "index.js",
   "repository": "https://github.com/davidvancl/gunnik",
   "author": "David Vancl",
   "license": "MIT",
@@ -15,6 +14,7 @@
     "@types/react-dom": "^18.2.1",
     "@types/webextension-polyfill": "^0.10.0",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.30.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
