fix: react 18 renderer & builder conets ts scripts

--- a/gunnik/extension/package.json
+++ b/gunnik/extension/package.json
@@ -29,13 +29,19 @@
   },
   "dependencies": {
     "@rollup/plugin-replace": "^3.0.0",
-    "@types/chrome": "^0.0.127",
-    "@types/firefox-webext-browser": "^82.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.22",
+    "gun": "^0.2020.1239",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "rollup-plugin-import-css": "^3.2.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
     "webextension-polyfill": "^0.7.0"
   },
   "devDependencies": {
@@ -43,7 +49,11 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@types/chrome": "^0.0.127",
+    "@types/firefox-webext-browser": "^82.0.0",
     "@types/jest": "^26.0.19",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "cross-env": "^7.0.3",
@@ -51,9 +61,14 @@
     "eslint-plugin-react": "^7.21.5",
     "jest": "^26.6.3",
     "jest-chrome": "^0.7.0",
+    "postcss": "^8.4.23",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^8.3.2",
     "rollup": "^2.56.3",
     "rollup-plugin-chrome-extension": "^3.6.1",
     "rollup-plugin-empty-dir": "^1.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-sass": "^1.12.19",
     "rollup-plugin-zip": "^1.0.3",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
