--- a/gunnik/client/package.json
+++ b/gunnik/client/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production --progress",
+    "build-chrome": "webpack --mode production --progress --env=chrome",
     "tscheck": "tsc",
     "lint": "eslint --ext .js,.ts,.jsx,.tsx src",
     "format": "yarn run lint --fix & yarn prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
