--- a/gunnik/client/tsconfig.json
+++ b/gunnik/client/tsconfig.json
@@ -19,6 +19,12 @@
         "paths": {
             "@components/*": [
                 "components/*"
+            ],
+            "@assets/*": [
+                "assets/*"
+            ],
+            "@contexts/*": [
+                "contexts/*"
             ]
         }
     },
